src/styles/theme.css
@theme {
	--font-Inter: 'Inter', sans-serif;
	--font-Tinos: 'Tinos', Times, Times New Roman, serif;

	--color-background: #04060a;
	--color-navbar: #0b111c;
	--color-scrollbar-bg: #101828;
	--color-scrollbar-thumb: #1d2b48;
	--color-scrollbar-thumb-hover: #2a3f69;

	--color-text: #bbb;
	--color-text-highlight: #ddd;
	--color-text-tag: #999;
	--color-blog-collapse-color: theme(colors.gray.900);
	--color-blog-collapse-color-hover: theme(colors.gray.800);
	--color-popover-background: #111a2b;
	--color-counter: #a11;
	--color-tooltip-bg: #ddd;
	--color-tooltip-text: #222;
	--color-switch-bg: #151515;
	--color-switch-thumb: #ddd;
	--color-switch-checked-bg: #ddd;
	--color-switch-checked-thumb: #151515;
	--color-blog-post-card: theme(colors.gray.900);
	--color-blog-post-question-bg: theme(colors.gray.800);
	--color-blog-post-summary: #888;
	--color-blog-post-link-border: theme(colors.gray.500);
	--color-action-button-bg: #162238;
	--color-action-button-hover-bg: #1a2842;
	--color-toast-bg: #0b111c;
	--color-download-icon-fill: #40a834;
	--color-download-icon-hover: #1a2842;
	--color-progress-bar-bg: #1a2842;
	--color-progress-bar-fill: #2a3f69;
 
	--z-index-blog: 40;
	--z-index-sticky: 50;
	--z-index-popover: 60;
	--z-index-zoomed-post-backdrop: 70;
	--z-index-zoomed-post: 80;
	--z-index-tooltip: 85;
	--z-index-toast: 90;
}

